# RCapi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: c-cpp.yml
curl/: acinclude.m4
src/RestfulEzreal/: BatchRequests.cpp  BatchRequests.h  QueryForm.cpp  QueryForm.h  RequestQueue.cpp  RequestQueue.h  RestfulEzreal.cpp  RestfulEzreal.h
src/RestfulEzreal/Endpoints/: LOL_endpoints.cpp  LOR_endpoints.cpp  TFT_endpoints.cpp  VAL_endpoints.cpp  endpoints.cpp
src/RestfulEzreal/utils/: utils.cpp  utils.h
tests/test_jsons/: req16018.json  req1627.json  req1721.json  req1726.json
